# telegram-shell-bot

./: AGENTS.md  collect_vps_info.sh  deploy.sh  pyproject.toml  telegram-shell-bot.yml
